style waiting room

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -31,7 +31,7 @@
     <div id="room">
         <h1>Welcome <%= username %>
         </h1>
-        <ul id="player_list"></ul>
+        <div id="player_list"></div>
         <button type="submit" id="BtnGame" style="display: none;">Start Game !</button>
     </div>
 
