--- a/public/CSS/hud.css
+++ b/public/CSS/hud.css
@@ -356,18 +356,15 @@ body h1 {
 }
 #room .card {
   box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.3);
+  margin-bottom: 2em;
   padding: 10px;
+  padding-right: 30px;
   padding-left: 30px;
   border-radius: 10px;
   align-items: center;
   font-family: 'KoHo', sans-serif;
-  width: 80%;
-}
-#room li {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin-bottom: 25px;
 }
 /* -------------------------------------------------------------------------- */
 /*                                 Parameters                                 */
