--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -459,19 +459,15 @@ body {
 
     .card {
         box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.3);
+        margin-bottom: 2em;
         padding: 10px;
+        padding-right: 30px;
         padding-left: 30px;
         border-radius: 10px;
         align-items: center;
         font-family: @primary-font, @secondary-font;
-        width: 80%;
-    }
-
-    li {
         display: flex;
         justify-content: space-between;
-        align-items: center;
-        margin-bottom: 25px;
     }
 }
 
