style waiting room

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -33,6 +33,7 @@
         </h1>
         <div id="player_list"></div>
         <button type="submit" id="BtnGame" style="display: none;">Start Game !</button>
+        <button id="chat-button">Open Chat</button>
     </div>
 
     <div style="display: none;" id="game">
@@ -417,7 +418,7 @@
 
     </div>
 
-    <button class="button" id="chat-button">Open Chat</button>
+
     <dialog class="modal" id="chat-modal">
         <div class="modal-content">
             <div class="top-modal">
