--- a/public/CSS/hud.css
+++ b/public/CSS/hud.css
@@ -58,6 +58,20 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  /* width */
+  /* Track */
+  /* Handle */
+}
+body ::-webkit-scrollbar {
+  width: 10px;
+}
+body ::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+body ::-webkit-scrollbar-thumb {
+  background: #f5dba6;
+  border-radius: 10px;
 }
 body h1 {
   font-size: 2.5rem;
@@ -99,8 +113,8 @@ body h1 {
   text-align: center;
 }
 .button {
-  height: 50px;
-  width: 70px;
+  height: 2rem;
+  width: 50px;
   border-radius: 8px;
   cursor: pointer;
   border: 3px solid #f5dba6;
@@ -347,6 +361,15 @@ body h1 {
   border-radius: 10px;
   font-size: 1em;
   margin-top: 5em;
+}
+#room #chat-button {
+  width: 35%;
+  height: 50px;
+  display: block;
+  margin: auto;
+  border-radius: 8px;
+  font-size: 1em;
+  margin-top: 2em;
 }
 #room .removePlayerButton {
   width: 50px;
