--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -91,6 +91,23 @@ body {
 
     overflow: hidden;
 
+    /* width */
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px grey;
+        border-radius: 10px;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: @primary-color;
+        border-radius: 10px;
+    }
+
     h1 {
         font-size: 2.5rem;
         text-align: center;
@@ -140,8 +157,8 @@ body {
 }
 
 .button {
-    height: 50px;
-    width: 70px;
+    height: 2rem;
+    width: 50px;
     border-radius: 8px;
     cursor: pointer;
     border: 3px solid @primary-color;
@@ -448,6 +465,16 @@ body {
         border-radius: 10px;
         font-size: 1em;
         margin-top: 5em;
+    }
+
+    #chat-button {
+        width: 35%;
+        height: 50px;
+        display: block;
+        margin: auto;
+        border-radius: 8px;
+        font-size: 1em;
+        margin-top: 2em;
     }
 
     .removePlayerButton {
