--- a/public/CSS/lobby.less
+++ b/public/CSS/lobby.less
@@ -155,11 +155,20 @@ main {
         display: flex;
         justify-content: left;
         align-items: center;
-        
+
         input {
+            background-color: @bg-color;
+            color: @primary-color;
+            font-family: @primary-font, @secondary-font;
+            font-size: medium;
+            font-weight: bold;
+            border: 3px solid @primary-color;
+            outline: none;
+            box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.3);
             height: 1.7em;
             width: 20em;
             margin-left: 3em;
+            padding: 8px 12px 8px 12px;
             border-radius: 8px;
         }
     }
