--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -28,18 +28,15 @@
 
         <!-- Scoreboard -->
         <section class="scoreboard" id="scoreboard">
-            <h2>
-                <ion-icon name="help"></ion-icon>SAY MY NAME !
-            </h2>
             <div id="pseudo">
                 <label for="pseudo_input">
-                    <h3>Pseudo</h3>
+                    <h2>Pseudo :</h2>
                 </label>
                 <input type="text" name="pseudo" placeholder="Jean Mich du 59" id="pseudo_input" />
             </div>
         </section>
 
-        <hr />
+        <hr/>
 
         <!-- Waiting player -->
         <nav class="games" id="games">
