--- a/public/CSS/hud.css
+++ b/public/CSS/hud.css
@@ -113,7 +113,7 @@ body h1 {
   text-align: center;
 }
 .button {
-  height: 2rem;
+  height: 40px;
   width: 50px;
   border-radius: 8px;
   cursor: pointer;
@@ -284,6 +284,7 @@ body h1 {
   width: 300px;
   max-width: 700px;
   margin-left: 20px;
+  font-weight: bold;
   background-color: #383331;
   color: #f5dba6;
   border: 3px solid #383331;
@@ -294,9 +295,18 @@ body h1 {
   justify-content: space-between;
 }
 #chat-modal #chatForm input {
+  background-color: #383331;
+  color: white;
+  font-family: 'KoHo', sans-serif;
+  font-size: medium;
+  font-weight: bold;
+  border: 3px solid #f5dba6;
+  outline: none;
+  box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.3);
+  height: 20px;
+  width: 70%;
+  padding: 5px 5px 5px 5px;
   border-radius: 8px;
-  height: 2em;
-  width: 75%;
 }
 #chat-modal #chatForm button {
   border-radius: 8px;
@@ -379,6 +389,7 @@ body h1 {
 }
 #room .card {
   box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.3);
+  border: 3px solid #f5dba6;
   margin-bottom: 2em;
   padding: 10px;
   padding-right: 30px;
