--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
             transform: translateX(-50%);
             z-index: 100;
             height: 150px;
-            width: 400px;
+            width: auto;
             display: flex;
             flex-direction: column;
             display: none;
