--- a/public/CSS/lobby.css
+++ b/public/CSS/lobby.css
@@ -118,7 +118,7 @@ main #pseudo {
 }
 main #pseudo input {
   background-color: #383331;
-  color: #f5dba6;
+  color: #eee;
   font-family: 'KoHo', sans-serif;
   font-size: medium;
   font-weight: bold;
