--- a/public/CSS/lobby.less
+++ b/public/CSS/lobby.less
@@ -158,7 +158,7 @@ main {
 
         input {
             background-color: @bg-color;
-            color: @primary-color;
+            color: @text-color;
             font-family: @primary-font, @secondary-font;
             font-size: medium;
             font-weight: bold;
