--- a/views/game.ejs
+++ b/views/game.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game</title>
+    <title>Don't Collapse | Game</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -431,7 +431,7 @@
     <dialog class="modal" id="chat-modal">
         <div class="modal-content">
             <div class="top-modal">
-                <h2 class="title-modal">Alors qu'est ce que ça dit ?</h2>
+                <h2 class="title-modal">Ça dit quoi sa mère ?</h2>
                 <span class="close-button" id="close-chat">&times;</span>
             </div>
             <form id="chatForm" action="">
@@ -463,8 +463,6 @@
     </div>
 
     <!-- ------------------------------- Script -------------------------------- -->
-    <!-- <script src="JS/main.js" type="module"></script> -->
-    <!-- <script src="JS/WebSocket.js" type="module"></script> -->
     <script src="JS/game.js" type="module"></script>
 </body>
 
