--- a/public/CSS/hud.css
+++ b/public/CSS/hud.css
@@ -144,6 +144,7 @@ body h1 {
   justify-content: space-between;
 }
 .modal .modal-content .top-modal .title-modal {
+  color: #eee;
   margin: 0;
   padding-left: 0;
   padding-right: 0;
@@ -296,7 +297,7 @@ body h1 {
 }
 #chat-modal #chatForm input {
   background-color: #383331;
-  color: white;
+  color: #eee;
   font-family: 'KoHo', sans-serif;
   font-size: medium;
   font-weight: bold;
@@ -312,7 +313,6 @@ body h1 {
   border-radius: 8px;
 }
 #chat-modal #messages {
-  padding-top: 20px;
   padding-bottom: 10px;
   display: flex;
   flex-direction: column-reverse;
@@ -417,6 +417,9 @@ body h1 {
 }
 #parameters .param-content[open] {
   animation: slide-left-params 100ms forwards, fade-in 250ms forwards;
+}
+#parameters .param-content[open]:hover {
+  color: #f5dba6;
 }
 #parameters .param-content[closing] {
   animation: slide-right-params 100ms forwards, fade-out 250ms forwards;
