--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,16 +12,18 @@
     <style media="screen" type="text/css">
         @import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
 
-        html, body {
+        html,
+        body {
             background-color: #fff;
             margin: 0;
             padding: 0;
             height: 100%;
             width: 100%;
         }
-        *{
-            padding:0;
-            margin:0
+
+        * {
+            padding: 0;
+            margin: 0
         }
 
         #myThreeJsCanvas {
@@ -68,11 +70,71 @@
             font-size: 50px;
             color: white
         }
-        #icon1 ion-icon{
-            margin-top :10px;
+
+        #icon1 ion-icon {
+            margin-top: 10px;
             font-weight: bold;
         }
-        #icon1:hover{
+
+        #icon1:hover {
+            cursor: pointer;
+        }
+
+
+        #myMenuSortie {
+            background-color: rgba(0, 0, 0, 0.349);
+            position: absolute;
+            bottom: 0;
+            margin-bottom: 30px;
+            border-radius: 20px;
+            padding: 20px;
+            margin-left: 50%;
+            transform: translateX(-50%);
+            z-index: 100;
+            height: 150px;
+            width: auto;
+            display: flex;
+            flex-direction: column;
+            display: none;
+            transition: all 2s ease;
+        }
+
+        #myMenuSortie #title_menuSortie {
+            color: white;
+            font-family: "Koulen";
+            text-align: center;
+            letter-spacing: 2px;
+            font-size: 30px;
+            padding: 0;
+            margin: 0
+        }
+
+        #myMenuSortie #SortiWrap {
+            display: flex;
+            flex-direction:row;
+            justify-content: space-around;
+        }
+
+        #Sicon1,
+        #Sicon2,
+        #Sicon3 {
+            height: 70px;
+            width: 70px;
+            background-color: rgba(255, 255, 255, 0.603);
+            border-radius: 20px;
+            text-align: center;
+            font-size: 50px;
+            color: white
+        }
+
+        #Sicon1 ion-icon,
+        #Sicon2 ion-icon,
+        #Sicon3 ion-icon {
+            margin-top: 10px;
+            font-weight: bold;
+        }
+
+        #icon1:hover #icon3:hover #icon2:hover {
             cursor: pointer;
         }
     </style>
@@ -92,6 +154,21 @@
         <div>
             <div id="icon1">
                 <ion-icon name="pricetag-outline"></ion-icon>
+            </div>
+
+        </div>
+    </div>
+    <div id="myMenuSortie">
+        <h1 id="title_menuSortie">Titre</h1>
+        <div id="SortiWrap">
+            <div id="Sicon1">
+                <ion-icon name="person-outline"></ion-icon>
+            </div>
+            <div id="Sicon2">
+                <ion-icon name="person-outline"></ion-icon>
+            </div>
+            <div id="Sicon3">
+                <ion-icon name="person-outline"></ion-icon>
             </div>
 
         </div>
