buy engine front to back event + display card start game

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -100,45 +100,45 @@
                     <!-- ----------------------------------------------------------------------- -->
                     <div id="left-page" class="rubric">
                         <!-- ----------------------------- Ressources ------------------------------ -->
-                        <div class="elec clickable" style="display:block;">
+                        <div class="elec 1 clickable" style="display:block;">
                             <p>Coup de Foudre</p>
                             <p style="display: none;">Rapide description de coup de foudre</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="elec clickable" style="display:block;">
+                        <div class="elec 2 clickable" style="display:block;">
                             <p>Électricité d'Euler</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="eau clickable" style="display: none;">
+                        <div class="eau 1 clickable" style="display: none;">
                             <p>Hâche 2 Eaux</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="eau clickable" style="display: none;">
+                        <div class="eau 2 clickable" style="display: none;">
                             <p>Électricité d'Euler</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="cartons clickable" style="display: none;">
+                        <div class="cartons 1 clickable" style="display: none;">
                             <p>Jean Balle</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="cartons clickable" style="display: none;">
+                        <div class="cartons 2 clickable" style="display: none;">
                             <p>Toutânkharton</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="etain clickable" style="display: none;">
+                        <div class="etain 1 clickable" style="display: none;">
                             <p>Casto là bas</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="etain clickable" style="display: none;">
+                        <div class="etain 2 clickable" style="display: none;">
                             <p>Quincaillepleure</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -191,46 +191,54 @@
                         </div>
 
                         <!-- -------------------------------- Neuf --------------------------------- -->
-                        <div class="manix clickable" style="display: none;">
-                            <p>Poste à souder <br> Niveau 1</p>
+                        <div class="manix 0 clickable" style="display: none;">
+                            <p>Poste à souder</p>
+                            <p>Niveau 1</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="manix clickable" style="display: none;">
-                            <p>Assembleur mécanique <br> Niveau 1</p>
-                            <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
-                        </div>
-
-                        <div class="droit clickable" style="display: none;">
-                            <p>Poste à souder <br> Niveau 2</p>
-                            <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
-                        </div>
-                        <div class="droit clickable" style="display: none;">
-                            <p>Assembleur mécanique <br> Niveau 2</p>
+                        <div class="manix 1 clickable" style="display: none;">
+                            <p>Assembleur de précision</p>
+                            <p>Niveau 1</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="braz clickable" style="display: none;">
-                            <p>Poste à souder <br> Niveau 3</p>
+                        <div class="droit 0 clickable" style="display: none;">
+                            <p>Poste à souder </p>
+                            <p>Niveau 2</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="braz clickable" style="display: none;">
-                            <p>Assembleur mécanique <br> Niveau 3</p>
+                        <div class="droit 1 clickable" style="display: none;">
+                            <p>Assembleur de précision </p>
+                            <p> Niveau 2</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="tesla clickable" style="display: none;">
-                            <p>Poste à souder <br> Niveau 4</p>
+                        <div class="braz 0 clickable" style="display: none;">
+                            <p>Poste à souder</p>
+                            <p>Niveau 3</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="tesla clickable" style="display: none;">
-                            <p>Assembleur mécanique <br> Niveau 4</p>
+                        <div class="braz 1 clickable" style="display: none;">
+                            <p>Assembleur de précision</p>
+                            <p>Niveau 3</p>
+                            <p style="display: none;">Rapide description</p>
+                            <button class="buy-button" style="display: none;">Acheter</button>
+                        </div>
+
+                        <div class="tesla 0 clickable" style="display: none;">
+                            <p>Poste à souder</p>
+                            <p>Niveau 4</p>
+                            <p style="display: none;">Rapide description</p>
+                            <button class="buy-button" style="display: none;">Acheter</button>
+                        </div>
+                        <div class="tesla 1 clickable" style="display: none;">
+                            <p>Assembleur de précision </p>
+                            <p>Niveau 4</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
@@ -255,45 +263,45 @@
                     <div id="right-page" class="rubric">
                         <!-- ----------------------------- Ressources ------------------------------ -->
 
-                        <div class="elec clickable" style="display:block;">
+                        <div class="elec 3 clickable" style="display:block;">
                             <p>Petit Tonnerre</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="elec clickable" style="display:block;">
+                        <div class="elec 4 clickable" style="display:block;">
                             <p>Durexcel</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="eau clickable" style="display: none;">
+                        <div class="eau 3 clickable" style="display: none;">
                             <p>Rheaum</p>
                             <p style="display: none;">Rapide description</p>
                             <button class=" buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="eau clickable" style="display: none;">
+                        <div class="eau 4 clickable" style="display: none;">
                             <p>Cri'Staline</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="cartons clickable" style="display: none;">
+                        <div class="cartons 3 clickable" style="display: none;">
                             <p>Mine Carton</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="cartons clickable" style="display: none;">
+                        <div class="cartons 4 clickable" style="display: none;">
                             <p>Scotch Willski</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="etain clickable" style="display: none;">
+                        <div class="etain 3 clickable" style="display: none;">
                             <p>P'étain clou</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="etain clickable" style="display: none;">
+                        <div class="etain 4 clickable" style="display: none;">
                             <p>Le Roi Merlin</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -347,46 +355,54 @@
 
                         <!-- -------------------------------- Neuf --------------------------------- -->
 
-                        <div class="manix clickable" style="display: none;">
-                            <p>Assembleur de précision <br> Niveau 1</p>
+                        <div class="manix 2 clickable" style="display: none;">
+                            <p>Assembleur mécanique</p> 
+                            <p> Niveau 1</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="manix clickable" style="display: none;">
-                            <p>Assembleur général <br> Niveau 1</p>
-                            <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
-                        </div>
-
-                        <div class="droit clickable" style="display: none;">
-                            <p>Assembleur de précision <br> Niveau 2</p>
-                            <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
-                        </div>
-                        <div class="droit clickable" style="display: none;">
-                            <p>Assembleur général <br> Niveau 2</p>
+                        <div class="manix 3 clickable" style="display: none;">
+                            <p>Assembleur général</p>
+                            <p> Niveau 1</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="braz clickable" style="display: none;">
-                            <p>Assembleur de précision <br> Niveau 3</p>
+                        <div class="droit 2 clickable" style="display: none;">
+                            <p>Assembleur mécanique </p>
+                            <p>Niveau 2</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="braz clickable" style="display: none;">
-                            <p>Assembleur général <br> Niveau 3</p>
+                        <div class="droit 3 clickable" style="display: none;">
+                            <p>Assembleur général </p>
+                            <p>Niveau 2</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="tesla clickable" style="display: none;">
-                            <p>Assembleur de précision <br> Niveau 4</p>
+                        <div class="braz 2 clickable" style="display: none;">
+                            <p>Assembleur mécanique </p>
+                            <p>Niveau 3</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="tesla clickable" style="display: none;">
-                            <p>Assembleur général <br> Niveau 4</p>
+                        <div class="braz 3 clickable" style="display: none;">
+                            <p>Assembleur général </p>
+                            <p>Niveau 3</p>
+                            <p style="display: none;">Rapide description</p>
+                            <button class="buy-button" style="display: none;">Acheter</button>
+                        </div>
+
+                        <div class="tesla 2 clickable" style="display: none;">
+                            <p>Assembleur mécanique </p>
+                            <p>Niveau 4</p>
+                            <p style="display: none;">Rapide description</p>
+                            <button class="buy-button" style="display: none;">Acheter</button>
+                        </div>
+                        <div class="tesla 3 clickable" style="display: none;">
+                            <p>Assembleur général </p>
+                            <p>Niveau 4</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
